tests/ui/pin_cell_slab_vacant_entry.stderr
error[E0382]: use of moved value: `entry`
 --> tests/ui/pin_cell_slab_vacant_entry.rs:9:13
  |
4 |     entry: PinCellSlabVacantEntry<'a, u8>,
  |     ----- move occurs because `entry` has type `PinCellSlabVacantEntry<'_, u8, (), u32::MAX>`, which does not implement the `Copy` trait
...
9 |     (entry, entry)
  |      -----  ^^^^^ value used here after move
  |      |
  |      value moved here
